Several Updates: fix: Activation & Deactivation was not working properly refactor: Main class name changed feat: Activation & Deactivation file added to composer

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "autoload": {
         "psr-4": {
             "WCPress\\WCP\\": "includes/"
-        }
+        },
+        "files": [
+            "activation-deactivation.php"
+        ]
     },
     "authors": [
         {
