build sequence added

--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -19,6 +19,8 @@ jobs:
         run: |
           composer install --no-dev
           npm install
+          npm run build
+          npm run makepot
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@stable
         with:
