--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "start": "wp-scripts start --progress",
     "build": "wp-scripts build",
     "sass:watch": "gulp sass:watch",
-    "makepot": "wp i18n make-pot . --domain='wc-call-for-price' --include='templates,activation-deactivation.php,wc-call-for-price.php' languages/wc-call-for-price.pot",
+    "makepot": "wp-cli i18n make-pot . --domain='wc-call-for-price' --include='templates,activation-deactivation.php,wc-call-for-price.php' languages/wc-call-for-price.pot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aftabul Islam",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@wordpress/scripts": "^26.9.0",
-    "gulp": "^3.9.1",
+    "@wordpress/scripts": "^19.2.4",
+    "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0"
   },
   "overrides": {
     "graceful-fs": "^4.2.11"
+  },
+  "dependencies": {
+    "latest": "^0.2.0"
   }
 }
