--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "wp-scripts start --progress",
     "build": "wp-scripts build",
     "sass:watch": "gulp sass:watch",
-    "makepot": "/home/runner/work/_temp/wp-cli.mSOd9T/wp-cli-2.11.0.phar i18n make-pot . --domain='wc-call-for-price' --include='templates,activation-deactivation.php,wc-call-for-price.php' languages/wc-call-for-price.pot",
+    "makepot": "wp i18n make-pot . --domain='wc-call-for-price' --include='templates,activation-deactivation.php,wc-call-for-price.php' languages/wc-call-for-price.pot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aftabul Islam",
