ZIP build added

--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -30,6 +30,10 @@ jobs:
         uses: 10up/action-wordpress-plugin-deploy@stable
         with:
           dry-run: ${{ github.event.inputs.dry_run }}
+      - name: Build ZIP
+        uses: 10up/action-wordpress-plugin-build-zip@stable
+        with:
+          retention-days: 2
         env:
           SVN_PASSWORD: ${{ secrets.SVN_WCP_PASSWORD }}
           SVN_USERNAME: ${{ secrets.SVN_WCP_USERNAME }}
