--- a/.github/workflows/wp-asset-update.yml
+++ b/.github/workflows/wp-asset-update.yml
@@ -11,9 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: Build Plugin
+        run: |
+          composer install --no-dev
+          npm install
+          npm run build
+          npm run makepot
+      - name: Copy resource to distribution directory
+        run: bash distribution.sh
       - name: Updating wordpress.org assets
         uses: 10up/action-wordpress-plugin-asset-update@stable
         env:
           SVN_PASSWORD: ${{ secrets.SVN_WCP_PASSWORD }}
           SVN_USERNAME: ${{ secrets.SVN_WCP_USERNAME }}
           SLUG: wc-call-for-price
+          BUILD_DIR: dist
